Add Formspree ID and Have Fun link.

--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@
 <footer>
   <div class="footer-logo">OPE // Oursler Performance Engineering</div>
   <div style="display:flex;align-items:center;gap:2rem;">
-    <a href="hfr-site.html" style="font-family:'Share Tech Mono',monospace;font-size:0.62rem;letter-spacing:0.18em;color:var(--text-dim);text-decoration:none;text-transform:uppercase;opacity:0.6;transition:opacity 0.2s;" onmouseover="this.style.opacity='1'" onmouseout="this.style.opacity='0.6'">Partner → Have Fun Racing ↗</a>
+    <a href="havefun.club" style="font-family:'Share Tech Mono',monospace;font-size:0.62rem;letter-spacing:0.18em;color:var(--text-dim);text-decoration:none;text-transform:uppercase;opacity:0.6;transition:opacity 0.2s;" onmouseover="this.style.opacity='1'" onmouseout="this.style.opacity='0.6'">Partner → Have Fun Racing ↗</a>
     <div class="footer-copy">© 2025 — All rights reserved</div>
   </div>
 </footer>
@@ -952,7 +952,7 @@
   const btn    = document.getElementById('submit-btn');
 
   // ⚠️ REPLACE THIS with your Formspree form ID
-  const FORMSPREE_ID = 'YOUR_FORMSPREE_ID';
+  const FORMSPREE_ID = 'maqdveaq';
 
   form.addEventListener('submit', async (e) => {
     e.preventDefault();
