Trying to fix link to havefun.club.

--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@
 <footer>
   <div class="footer-logo">OPE // Oursler Performance Engineering</div>
   <div style="display:flex;align-items:center;gap:2rem;">
-    <a href="havefun.club" style="font-family:'Share Tech Mono',monospace;font-size:0.62rem;letter-spacing:0.18em;color:var(--text-dim);text-decoration:none;text-transform:uppercase;opacity:0.6;transition:opacity 0.2s;" onmouseover="this.style.opacity='1'" onmouseout="this.style.opacity='0.6'">Partner → Have Fun Racing ↗</a>
+    <a href="https://havefun.club" style="font-family:'Share Tech Mono',monospace;font-size:0.62rem;letter-spacing:0.18em;color:var(--text-dim);text-decoration:none;text-transform:uppercase;opacity:0.6;transition:opacity 0.2s;" onmouseover="this.style.opacity='1'" onmouseout="this.style.opacity='0.6'">Partner → Have Fun Racing ↗</a>
     <div class="footer-copy">© 2025 — All rights reserved</div>
   </div>
 </footer>
